--- a/css/horarios-turnos.css
+++ b/css/horarios-turnos.css
@@ -21,13 +21,14 @@ img{
 }
 
 header {
-    background-color: coral;
-    color: rgb(242, 184, 194);
+    background-color: rgba(163, 71, 71, 0.726);
+    color: rgb(255, 161, 177);
     padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 
 header a{
     color: black;
@@ -36,4 +37,71 @@ header a{
 header nav ul{
     display: flex;
     gap: 1rem;
+}
+
+.subtitulo{
+    display: flex;
+    align-items: start;
+    margin-left: 1rem;
+    margin-top: 1rem;
+}
+
+.info-horarios{
+    display: flex;
+    flex-direction: column ;
+    align-items: center;
+}
+
+.horarios-semana{
+    display: flex;
+}
+
+.horarios-semana article{
+    border: double;
+    border-radius: 3px;
+    margin: 1rem;
+}
+
+.info-disponibilidad article{
+    margin: 1rem;
+    
+}
+
+.condiciones{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+
+#instagram{
+    color: rgb(170, 25, 93);
+}
+
+#facebook{
+    color: rgb(66, 66, 255);
+}
+
+.info-disponibilidad{
+    display: flex;
+    flex-direction: row;
+}
+
+
+
+
+
+
+.pie-de-pagina{
+    display: flex;
+    justify-content: end;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+}
+
+.pie-de-pagina a{
+    border-style: groove;
+    border-radius: 4px;
+    border-color: black;
+    color: blueviolet;
+    padding: 0.7rem;
 }
