--- a/css/index.css
+++ b/css/index.css
@@ -17,12 +17,12 @@ ul li{
 }
 
 img{
-    max-width: 79%;
+    max-width: 80%;
 }
 
 header {
-    background-color: coral;
-    color: rgb(242, 184, 194);
+    background-color: rgba(163, 71, 71, 0.726);
+    color: rgb(255, 161, 177);
     padding: 1rem;
     display: flex;
     justify-content: space-between;
@@ -89,6 +89,7 @@ header nav ul{
     border-radius: 4px;
     border-color: black;
     color: blueviolet;
+    padding: 0.7rem;
 }
 
 
