--- a/css/info-precios.css
+++ b/css/info-precios.css
@@ -17,17 +17,18 @@ ul li{
 }
 
 img{
-    max-width: 100%;
+    max-width: 50%;
 }
 
 header {
-    background-color: coral;
-    color: rgb(242, 184, 194);
+    background-color: rgba(163, 71, 71, 0.726);
+    color: rgb(255, 161, 177);
     padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 
 header a{
     color: black;
@@ -38,17 +39,31 @@ header nav ul{
     gap: 1rem;
 }
 
-/* .lista-precios{
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.pie-de-pagina{
     display: flex;
-    flex-direction: column;
+    justify-content: end;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
 }
 
-.precios{
-    display: flex;
-} */
-
-.precios{
-    display: row;
-    grid-template-columns: 3, 1fr;
-
+.pie-de-pagina a{
+    border-style: groove;
+    border-radius: 4px;
+    border-color: black;
+    color: blueviolet;
+    padding: 0.7rem;
 }
