--- a/css/sobre-nosotros.css
+++ b/css/sobre-nosotros.css
@@ -21,13 +21,14 @@ img{
 }
 
 header {
-    background-color: coral;
-    color: rgb(242, 184, 194);
+    background-color: rgba(163, 71, 71, 0.726);
+    color: rgb(255, 161, 177);
     padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 
 header a{
     color: black;
@@ -36,4 +37,43 @@ header a{
 header nav ul{
     display: flex;
     gap: 1rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.pie-de-pagina{
+    display: flex;
+    justify-content: center;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+}
+
+.pie-de-pagina a{
+    border-style: groove;
+    border-radius: 4px;
+    border-color: black;
+    color: blueviolet;
+    padding: 0.5rem;
 }
